[package]
name = "app-boilerplate-rust"
version = "1.7.0"
authors = ["Ledger"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.21.3"
include_gif = "1.2.0"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }

numtoa = "0.2.4"  
aes-gcm = { version = "0.10", default-features = false, features = ["alloc", "aes"] }
serde_json = { version = "1.0", default-features = false,features = ["alloc"]}   
hex = { version = "0.4", default-features = false, features = ["alloc", "serde"] }
generic-array = { version = "0.14", default-features = false }

hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = 'z'
lto = true

[features]
default = ["ledger_device_sdk/nbgl"]
debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/1'"]
name = "Rust Boilerplate"

[package.metadata.ledger.nanox]
icon = "crab_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "crab_14x14.gif"

[package.metadata.ledger.stax]
icon = "crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "crab_40x40.gif"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("stax", "flex", "nanos", "nanox", "nanosplus"))'] }